--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -15,7 +15,9 @@
       "template_folder": "_themes"
     }
   ],
-  "notification_subscribers": [],
+  "notification_subscribers": [
+    "v-shsh11@microsoft.com"
+  ],
   "sync_notification_subscribers": [],
   "branches_to_filter": [],
   "git_repository_url_open_to_public_contributors": "https://github.com/sharanya-rao/test-repo-280422-sync02",
